# daily-reviewer

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  README.md  STRUCTURE.md  config.py  main.py  pyproject.toml  report_design.html
nodes/: __init__.py  chrome_history.py  deep_audit.py  github_commits.py  report_renderer.py  todo_list.py  web_fetcher.py
